# non_gaussian_data_assim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
archive/: agmf_loc.py  enkf_loc.py
benjamin_case/: testcaseA_IC.mat
scripts/: da_benjamin_A.py  da_kuramoto.py  da_linear.py  da_lorenz_63.py  da_lorenz_96.py  da_sine_obs.py  da_sine_obsno_error.py  main_kuramoto.py  main_lorenz_63_pff.py  main_lorenz_96.py  main_lorenz_96_pff.py  vmap_test.py
scripts/archive/: main_kuramoto.py  main_lorenz_63.py  main_lorenz_63_pff.py  main_lorenz_96.py  main_lorenz_96_pff.py
src/non_gaussian_data_assim/: gaussian_mixture.py  jax_utils.py  kernels.py  localization.py  observation_operator.py  rand_utils.py  time_integrators.py
src/non_gaussian_data_assim/da_methods/: agmf.py  agmf_loc.py  base.py  enkf.py  enkf_loc.py  h_operator.py  particle_filter.py  pff.py  pff_loc.py
src/non_gaussian_data_assim/forward_models/: base.py  bk_rsf_1d.py  identity.py  kuramoto_sivashinsky.py  lorenz_63.py  lorenz_96.py  sine.py
