[project]
name = "non-gaussian-data-assim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "jax>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "non_gaussian_data_assim"


[dependency-groups]
dev = [
    "pytest>=8.3.5,<8.4.0",
    "pre-commit>=4.1.0,<4.2.0",
    "black>=24.1.0,<24.2.0",
    "isort>=6.0.0,<6.1.0",
    "mypy>=1.15.0,<1.16.0",
    "pdbpp>=0.11.7",
]


[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["scientific_stochastic_interpolants"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "scisi.metrics.LSIM.*"
ignore_errors = true
